added Huy's parts

--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: lattice\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘caret’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    lift\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "library(tidyverse)\n",
+    "library(caret)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,7 +46,138 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preliminary exploratory data analysis"
+    "The US Open grand slam tennis tournament has an estimated total prize money pool of USD $50.4 million. This puts it in line with high-value tournaments such as the MLB World Series and the PGA FedEx Cup (source: pledgesports.org). With such a high potential payoff, there is much incentive for competitive tennis athletes and coaches to understand the player attributes that contribute to tournament success. \n",
+    "\n",
+    "This project will study the data of tennis match results collected for the top 500 tennis players. The purpose of the study is to determine whether certain attributes to greater competitive success by analyzing player and match information. The dataset contains results from nearly 7,000 matches and includes the winner and loser heights, playing hands, countries of origin, ages, match times and other information (source: https://github.com/JeffSackmann/tennis_atp). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preliminary Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  .default = col_double(),\n",
+      "  tourney_id = \u001b[31mcol_character()\u001b[39m,\n",
+      "  tourney_name = \u001b[31mcol_character()\u001b[39m,\n",
+      "  surface = \u001b[31mcol_character()\u001b[39m,\n",
+      "  tourney_level = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_entry = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_name = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_hand = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_ioc = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_entry = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_name = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_hand = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_ioc = \u001b[31mcol_character()\u001b[39m,\n",
+      "  score = \u001b[31mcol_character()\u001b[39m,\n",
+      "  round = \u001b[31mcol_character()\u001b[39m\n",
+      ")\n",
+      "\n",
+      "See spec(...) for full column specifications.\n",
+      "\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  .default = col_double(),\n",
+      "  tourney_id = \u001b[31mcol_character()\u001b[39m,\n",
+      "  tourney_name = \u001b[31mcol_character()\u001b[39m,\n",
+      "  surface = \u001b[31mcol_character()\u001b[39m,\n",
+      "  tourney_level = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_entry = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_name = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_hand = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_ioc = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_entry = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_name = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_hand = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_ioc = \u001b[31mcol_character()\u001b[39m,\n",
+      "  score = \u001b[31mcol_character()\u001b[39m,\n",
+      "  round = \u001b[31mcol_character()\u001b[39m\n",
+      ")\n",
+      "\n",
+      "See spec(...) for full column specifications.\n",
+      "\n",
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  .default = col_double(),\n",
+      "  tourney_id = \u001b[31mcol_character()\u001b[39m,\n",
+      "  tourney_name = \u001b[31mcol_character()\u001b[39m,\n",
+      "  surface = \u001b[31mcol_character()\u001b[39m,\n",
+      "  tourney_level = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_seed = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_entry = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_name = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_hand = \u001b[31mcol_character()\u001b[39m,\n",
+      "  winner_ioc = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_seed = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_entry = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_name = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_hand = \u001b[31mcol_character()\u001b[39m,\n",
+      "  loser_ioc = \u001b[31mcol_character()\u001b[39m,\n",
+      "  score = \u001b[31mcol_character()\u001b[39m,\n",
+      "  round = \u001b[31mcol_character()\u001b[39m\n",
+      ")\n",
+      "\n",
+      "See spec(...) for full column specifications.\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error: Can't subset columns that don't exist.\n\u001b[31m✖\u001b[39m The column `result` doesn't exist.\n",
+     "output_type": "error",
+     "traceback": [
+      "Error: Can't subset columns that don't exist.\n\u001b[31m✖\u001b[39m The column `result` doesn't exist.\nTraceback:\n",
+      "1. tennis %>% select(result) %>% unlist() %>% createDataPartition(p = 0.75, \n .     list = FALSE)",
+      "2. withVisible(eval(quote(`_fseq`(`_lhs`)), env, env))",
+      "3. eval(quote(`_fseq`(`_lhs`)), env, env)",
+      "4. eval(quote(`_fseq`(`_lhs`)), env, env)",
+      "5. `_fseq`(`_lhs`)",
+      "6. freduce(value, `_function_list`)",
+      "7. function_list[[i]](value)",
+      "8. select(., result)",
+      "9. select.data.frame(., result)",
+      "10. tidyselect::vars_select(tbl_vars(.data), !!!enquos(...))",
+      "11. eval_select_impl(NULL, .vars, expr(c(!!!dots)), include = .include, \n  .     exclude = .exclude, strict = .strict, name_spec = unique_name_spec, \n  .     uniquely_named = TRUE)",
+      "12. with_subscript_errors(vars_select_eval(vars, expr, strict, data = x, \n  .     name_spec = name_spec, uniquely_named = uniquely_named, type = type), \n  .     type = type)",
+      "13. tryCatch(instrument_base_errors(expr), vctrs_error_subscript = function(cnd) {\n  .     cnd$subscript_action <- subscript_action(type)\n  .     cnd$subscript_elt <- \"column\"\n  .     cnd_signal(cnd)\n  . })",
+      "14. tryCatchList(expr, classes, parentenv, handlers)",
+      "15. tryCatchOne(expr, names, parentenv, handlers[[1L]])",
+      "16. value[[3L]](cond)",
+      "17. cnd_signal(cnd)",
+      "18. rlang:::signal_abort(x)"
+     ]
+    }
+   ],
+   "source": [
+    "data2017 <- read_csv('https://raw.githubusercontent.com/JeffSackmann/tennis_atp/master/atp_matches_2017.csv')\n",
+    "data2018 <- read_csv('https://raw.githubusercontent.com/JeffSackmann/tennis_atp/master/atp_matches_2018.csv')\n",
+    "data2019 <- read_csv('https://raw.githubusercontent.com/JeffSackmann/tennis_atp/master/atp_matches_2019.csv')\n",
+    "\n",
+    "combined_data <- rbind(data2017, data2018, data2019)\n",
+    "\n",
+    "tennis <- combined_data %>% \n",
+    "    select(winner_hand, winner_age, loser_hand, loser_age, winner_rank, loser_rank)\n",
+    "\n",
+    "training_rows <- tennis %>%\n",
+    "    select(result) %>% \n",
+    "    unlist() %>%\n",
+    "    createDataPartition (p = 0.75 , list = FALSE)\n",
+    "\n",
+    "training_set <- tennis %>% slice (training_rows)\n",
+    "testing_set <- tennis %>% slice (-training_rows)"
    ]
   },
   {
