--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -2,27 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading required package: lattice\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘caret’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    lift\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(caret)"
@@ -169,9 +151,23 @@
     "combined_data <- rbind(data2017, data2018, data2019)\n",
     "\n",
     "tennis <- combined_data %>% \n",
-    "    select(winner_hand, winner_age, loser_hand, loser_age, winner_rank, loser_rank)\n",
+    "    select(winner_hand, loser_hand, winner_age, loser_age, winner_ht, loser_ht, minutes, w_ace, l_ace)\n",
     "\n",
-    "training_rows <- tennis %>%\n",
+    "tennis_win = select(tennis, winner_hand, winner_age, winner_ht, minutes, w_ace)\n",
+    "tennis_loss = select(tennis, loser_hand, loser_age, loser_ht, minutes, l_ace)\n",
+    "\n",
+    "tennis_win = mutate(tennis_win, hand = winner_hand, age = winner_age, height = winner_ht, aces = w_ace, result = 'w') %>%\n",
+    "            select(-winner_hand, -winner_age, -winner_ht, -w_ace)\n",
+    "tennis_loss = mutate(tennis_loss, hand = loser_hand, age = loser_age, height = loser_ht, aces = l_ace, result = 'l') %>%\n",
+    "            select(-loser_hand, -loser_age, -loser_ht, -l_ace)\n",
+    "\n",
+    "cleaned_data = rbind(tennis_win, tennis_loss)\n",
+    "\n",
+    "cleaned_data = mutate(cleaned_data, result = as.factor(result))\n",
+    "\n",
+    "head(cleaned_data)\n",
+    "\n",
+    "training_rows <- cleaned_data %>%\n",
     "    select(result) %>% \n",
     "    unlist() %>%\n",
     "    createDataPartition (p = 0.75 , list = FALSE)\n",
@@ -191,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to wrangle our data, we have to use the read_csv() function on the raw links to the data on: https://github.com/JeffSackmann/tennis_atp. Because we are looking across three years of data we read 3 files and combine them using the rbind() function. \n",
+    "In order to wrangle our data, we have to use the read_csv() function on the raw links to the data on: https://github.com/JeffSackmann/tennis_atp. Because we are looking across three years of data we read 3 files and combine them using the rbind() function. Cleaning the data involved separating the winners and losers, creating a new result column, and then recombining them into one cleaned data set.\n",
     "\n",
     "For classification analysis we will be using the following columns:\n",
     "\n",
