--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -2,9 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.2.1     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.3\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 2.1.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 0.8.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.4.0\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "Loading required package: lattice\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘caret’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    lift\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(caret)"
@@ -42,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -117,30 +146,64 @@
      ]
     },
     {
-     "ename": "ERROR",
-     "evalue": "Error: Can't subset columns that don't exist.\n\u001b[31m✖\u001b[39m The column `result` doesn't exist.\n",
-     "output_type": "error",
-     "traceback": [
-      "Error: Can't subset columns that don't exist.\n\u001b[31m✖\u001b[39m The column `result` doesn't exist.\nTraceback:\n",
-      "1. tennis %>% select(result) %>% unlist() %>% createDataPartition(p = 0.75, \n .     list = FALSE)",
-      "2. withVisible(eval(quote(`_fseq`(`_lhs`)), env, env))",
-      "3. eval(quote(`_fseq`(`_lhs`)), env, env)",
-      "4. eval(quote(`_fseq`(`_lhs`)), env, env)",
-      "5. `_fseq`(`_lhs`)",
-      "6. freduce(value, `_function_list`)",
-      "7. function_list[[i]](value)",
-      "8. select(., result)",
-      "9. select.data.frame(., result)",
-      "10. tidyselect::vars_select(tbl_vars(.data), !!!enquos(...))",
-      "11. eval_select_impl(NULL, .vars, expr(c(!!!dots)), include = .include, \n  .     exclude = .exclude, strict = .strict, name_spec = unique_name_spec, \n  .     uniquely_named = TRUE)",
-      "12. with_subscript_errors(vars_select_eval(vars, expr, strict, data = x, \n  .     name_spec = name_spec, uniquely_named = uniquely_named, type = type), \n  .     type = type)",
-      "13. tryCatch(instrument_base_errors(expr), vctrs_error_subscript = function(cnd) {\n  .     cnd$subscript_action <- subscript_action(type)\n  .     cnd$subscript_elt <- \"column\"\n  .     cnd_signal(cnd)\n  . })",
-      "14. tryCatchList(expr, classes, parentenv, handlers)",
-      "15. tryCatchOne(expr, names, parentenv, handlers[[1L]])",
-      "16. value[[3L]](cond)",
-      "17. cnd_signal(cnd)",
-      "18. rlang:::signal_abort(x)"
-     ]
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 6 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>minutes</th><th scope=col>hand</th><th scope=col>age</th><th scope=col>height</th><th scope=col>aces</th><th scope=col>result</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 91</td><td>R</td><td>30.89391</td><td>193</td><td>11</td><td>w</td></tr>\n",
+       "\t<tr><td>130</td><td>R</td><td>21.98494</td><td> NA</td><td>11</td><td>w</td></tr>\n",
+       "\t<tr><td>125</td><td>R</td><td>22.85832</td><td>185</td><td> 7</td><td>w</td></tr>\n",
+       "\t<tr><td> 75</td><td>R</td><td>20.23272</td><td> NA</td><td>12</td><td>w</td></tr>\n",
+       "\t<tr><td> 90</td><td>R</td><td>22.70500</td><td> NA</td><td> 1</td><td>w</td></tr>\n",
+       "\t<tr><td> 83</td><td>R</td><td>34.75428</td><td>175</td><td> 3</td><td>w</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " minutes & hand & age & height & aces & result\\\\\n",
+       " <dbl> & <chr> & <dbl> & <dbl> & <dbl> & <fct>\\\\\n",
+       "\\hline\n",
+       "\t  91 & R & 30.89391 & 193 & 11 & w\\\\\n",
+       "\t 130 & R & 21.98494 &  NA & 11 & w\\\\\n",
+       "\t 125 & R & 22.85832 & 185 &  7 & w\\\\\n",
+       "\t  75 & R & 20.23272 &  NA & 12 & w\\\\\n",
+       "\t  90 & R & 22.70500 &  NA &  1 & w\\\\\n",
+       "\t  83 & R & 34.75428 & 175 &  3 & w\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 6\n",
+       "\n",
+       "| minutes &lt;dbl&gt; | hand &lt;chr&gt; | age &lt;dbl&gt; | height &lt;dbl&gt; | aces &lt;dbl&gt; | result &lt;fct&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "|  91 | R | 30.89391 | 193 | 11 | w |\n",
+       "| 130 | R | 21.98494 |  NA | 11 | w |\n",
+       "| 125 | R | 22.85832 | 185 |  7 | w |\n",
+       "|  75 | R | 20.23272 |  NA | 12 | w |\n",
+       "|  90 | R | 22.70500 |  NA |  1 | w |\n",
+       "|  83 | R | 34.75428 | 175 |  3 | w |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  minutes hand age      height aces result\n",
+       "1  91     R    30.89391 193    11   w     \n",
+       "2 130     R    21.98494  NA    11   w     \n",
+       "3 125     R    22.85832 185     7   w     \n",
+       "4  75     R    20.23272  NA    12   w     \n",
+       "5  90     R    22.70500  NA     1   w     \n",
+       "6  83     R    34.75428 175     3   w     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
