commented out install.packages("GGally")

--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "install.packages(\"GGally\")\n",
+    "# install.packages(\"GGally\")\n",
     "library(tidyverse)\n",
     "library(caret)\n",
     "library(ggplot2)\n",
