--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "# install.packages(\"GGally\")\n",
+    "# install.packages(\"GGally\")   # Uncomment this line if GGally is not installed\n",
     "library(tidyverse)\n",
     "library(caret)\n",
     "library(ggplot2)\n",
@@ -78,7 +78,7 @@
    "source": [
     "The US Open grand slam tennis tournament has an estimated total prize money pool of USD $50.4 million. This puts it in line with high-value tournaments such as the MLB World Series and the PGA FedEx Cup (source: pledgesports.org). With such a high potential payoff, there is much incentive for competitive tennis athletes and coaches to understand the player attributes that contribute to tournament success. \n",
     "\n",
-    "This project will study the data of tennis match results collected for the top 500 tennis players. The purpose of the study is to determine whether certain attributes contribute to greater competitive success by analyzing player and match information. The dataset contains results from nearly 7,000 matches and includes the winner and loser heights, playing hands, countries of origin, ages, match times and other information (source: https://github.com/JeffSackmann/tennis_atp). "
+    "This project will study the data of tennis match results collected for the top 500 tennis players from 2017-2019. The purpose of the study is to determine whether certain attributes contribute to greater competitive success by analyzing player and match information. The dataset contains results from nearly 7,000 matches and includes the winner and loser heights, playing hands, countries of origin, ages, match times and other information (source: https://github.com/JeffSackmann/tennis_atp). "
    ]
   },
   {
@@ -86,6 +86,13 @@
    "metadata": {},
    "source": [
     "# Preliminary Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The tennis player data available on Jeff Sackmann's GitHub (here: https://github.com/JeffSackmann/tennis_atp) is split into CSV files per year. To begin, we will use the `read_csv()` function to scrape the data from the web and use `rbind()` to combine the three dataframes into a single one. "
    ]
   },
   {
