split up Preliminary Exploratory Data Analysis section

--- a/Proposal.ipynb
+++ b/Proposal.ipynb
@@ -109,6 +109,127 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "Next, we select the columns that we are interested in and tidy the data based on whether the given match `result` was a win or loss. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tennis <- combined_data %>% \n",
+    "    select(winner_hand, loser_hand, winner_age, loser_age, winner_ht, loser_ht, minutes, w_ace, l_ace)\n",
+    "\n",
+    "tennis_win = select(tennis, winner_hand, winner_age, winner_ht, minutes, w_ace)\n",
+    "tennis_loss = select(tennis, loser_hand, loser_age, loser_ht, minutes, l_ace)\n",
+    "\n",
+    "tennis_win = mutate(tennis_win, hand = winner_hand, age = winner_age, height = winner_ht, aces = w_ace, result = 'w') %>%\n",
+    "            select(-winner_hand, -winner_age, -winner_ht, -w_ace)\n",
+    "tennis_loss = mutate(tennis_loss, hand = loser_hand, age = loser_age, height = loser_ht, aces = l_ace, result = 'l') %>%\n",
+    "            select(-loser_hand, -loser_age, -loser_ht, -l_ace)\n",
+    "\n",
+    "cleaned_data = rbind(tennis_win, tennis_loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "The match `result` is then converted to a factor. This allows us to categorize each match winner and loser. The results of this categorization is shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 6 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>minutes</th><th scope=col>hand</th><th scope=col>age</th><th scope=col>height</th><th scope=col>aces</th><th scope=col>result</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>70</td><td>U</td><td>24.32033</td><td> NA</td><td> 1</td><td>l</td></tr>\n",
+       "\t<tr><td>NA</td><td>R</td><td>26.63381</td><td>175</td><td>NA</td><td>w</td></tr>\n",
+       "\t<tr><td>60</td><td>L</td><td>28.33402</td><td>190</td><td> 4</td><td>l</td></tr>\n",
+       "\t<tr><td>63</td><td>L</td><td>33.06502</td><td>188</td><td> 1</td><td>l</td></tr>\n",
+       "\t<tr><td>NA</td><td>R</td><td>32.94182</td><td>178</td><td>NA</td><td>l</td></tr>\n",
+       "\t<tr><td>88</td><td>R</td><td>23.22245</td><td> NA</td><td> 9</td><td>l</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " minutes & hand & age & height & aces & result\\\\\n",
+       " <dbl> & <chr> & <dbl> & <dbl> & <dbl> & <fct>\\\\\n",
+       "\\hline\n",
+       "\t 70 & U & 24.32033 &  NA &  1 & l\\\\\n",
+       "\t NA & R & 26.63381 & 175 & NA & w\\\\\n",
+       "\t 60 & L & 28.33402 & 190 &  4 & l\\\\\n",
+       "\t 63 & L & 33.06502 & 188 &  1 & l\\\\\n",
+       "\t NA & R & 32.94182 & 178 & NA & l\\\\\n",
+       "\t 88 & R & 23.22245 &  NA &  9 & l\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 6\n",
+       "\n",
+       "| minutes &lt;dbl&gt; | hand &lt;chr&gt; | age &lt;dbl&gt; | height &lt;dbl&gt; | aces &lt;dbl&gt; | result &lt;fct&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| 70 | U | 24.32033 |  NA |  1 | l |\n",
+       "| NA | R | 26.63381 | 175 | NA | w |\n",
+       "| 60 | L | 28.33402 | 190 |  4 | l |\n",
+       "| 63 | L | 33.06502 | 188 |  1 | l |\n",
+       "| NA | R | 32.94182 | 178 | NA | l |\n",
+       "| 88 | R | 23.22245 |  NA |  9 | l |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  minutes hand age      height aces result\n",
+       "1 70      U    24.32033  NA     1   l     \n",
+       "2 NA      R    26.63381 175    NA   w     \n",
+       "3 60      L    28.33402 190     4   l     \n",
+       "4 63      L    33.06502 188     1   l     \n",
+       "5 NA      R    32.94182 178    NA   l     \n",
+       "6 88      R    23.22245  NA     9   l     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cleaned_data = mutate(cleaned_data, result = as.factor(result))\n",
+    "rows = sample(nrow(cleaned_data))\n",
+    "cleaned_data = cleaned_data[rows, ]\n",
+    "\n",
+    "head(cleaned_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "Finally, we must separate the tidied data into training and testing sets. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -310,27 +431,6 @@
    "source": [
     "set.seed(42)\n",
     "\n",
-    "tennis <- combined_data %>% \n",
-    "    select(winner_hand, loser_hand, winner_age, loser_age, winner_ht, loser_ht, minutes, w_ace, l_ace)\n",
-    "\n",
-    "tennis_win = select(tennis, winner_hand, winner_age, winner_ht, minutes, w_ace)\n",
-    "tennis_loss = select(tennis, loser_hand, loser_age, loser_ht, minutes, l_ace)\n",
-    "\n",
-    "tennis_win = mutate(tennis_win, hand = winner_hand, age = winner_age, height = winner_ht, aces = w_ace, result = 'w') %>%\n",
-    "            select(-winner_hand, -winner_age, -winner_ht, -w_ace)\n",
-    "tennis_loss = mutate(tennis_loss, hand = loser_hand, age = loser_age, height = loser_ht, aces = l_ace, result = 'l') %>%\n",
-    "            select(-loser_hand, -loser_age, -loser_ht, -l_ace)\n",
-    "\n",
-    "cleaned_data = rbind(tennis_win, tennis_loss)\n",
-    "\n",
-    "cleaned_data = mutate(cleaned_data, result = as.factor(result))\n",
-    "\n",
-    "rows = sample(nrow(cleaned_data))\n",
-    "\n",
-    "cleaned_data = cleaned_data[rows, ]\n",
-    "\n",
-    "head(cleaned_data)\n",
-    "\n",
     "training_rows <- cleaned_data %>%\n",
     "    select(result) %>% \n",
     "    unlist() %>%\n",
@@ -338,7 +438,6 @@
     "\n",
     "training_set <- cleaned_data %>% slice (training_rows)\n",
     "testing_set <- cleaned_data %>% slice (-training_rows)\n",
-    "\n",
     "\n",
     "\n",
     "tennis_matrix_train <- ggcorr(training_set, label = TRUE, title = \"Training Data Correlations\")\n",
