why we dont use knn regression and linear regression

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -93,6 +93,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Methods and Results \n",
+    "## Reason why we don’t use knn regression and linear regression:\n",
+    "We used Knn in our project because we are predicitng the categories and not any quantitaive data. To add on, we are\n",
+    "only interested in a qualitative status of whether our playeres will win or lose in a match. Therefore, knn\n",
+    "classification will be good enough in order for us to predict the outcome. \n",
+    "\n",
+    "An important reason why we should not use linear regression is because the relationship between the \n",
+    "target and the predictor is not linear. Also, in linear regression, all the training data points will be used in \n",
+    "creating a linear 'line of best fit', and then the line is used to help us search for our predicted value. This \n",
+    "means that it is best for predictng quantitaiave data (numerical values), not qualitative data.\n",
+    "\n",
+    "K-nn regression is similar to linear regression and is also known to be used to quantitaitve data predicting scenarios, the lines are also a little squiggly and can not be interpreted easily anyway. Furthermore, using k-nn regression means we have to us use the scale function and this adds unnecessary work into the process when it won't even help us predict the qualitative outcome.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Citation"
    ]
   },
@@ -118,7 +136,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
