--- a/Report.ipynb
+++ b/Report.ipynb
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction"
+    "# 1 Introduction"
    ]
   },
   {
@@ -114,14 +114,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Methods - Classification\n"
+    "# 2 Methods\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The tennis player data available on Jeff Sackmann's GitHub (here: https://github.com/JeffSackmann/tennis_atp) is split into CSV files per year. To begin, we will use the read_csv() function to scrape the data from the web and use rbind() to combine the three dataframes into a single one."
+    "### 2.1 Loading Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The tennis player data available on Jeff Sackmann's GitHub<sup>**ADD THIS!!!!**</sup> is split into CSV files per year. To begin, we will use the read_csv() function to scrape the data from the web and use rbind() to combine the three dataframes into a single one."
    ]
   },
   {
@@ -135,6 +142,18 @@
     "data2019 <- read_csv('https://raw.githubusercontent.com/JeffSackmann/tennis_atp/master/atp_matches_2019.csv', col_types = cols())\n",
     "\n",
     "combined_data <- rbind(data2017, data2018, data2019)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Wrangling and Cleaning Data"
    ]
   },
   {
@@ -269,6 +288,18 @@
     "\n",
     "training_set <- cleaned_data %>% slice (training_rows) %>% na.omit()\n",
     "testing_set <- cleaned_data %>% slice (-training_rows) %>% na.omit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Data Summar"
    ]
   },
   {
@@ -924,19 +955,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in parse(text = x, srcfile = src): <text>:1:5: unexpected symbol\n1: Now we\n        ^\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in parse(text = x, srcfile = src): <text>:1:5: unexpected symbol\n1: Now we\n        ^\nTraceback:\n"
-     ]
-    }
-   ],
    "source": [
     "Now we can test the accuracy of our model using the testing set data that we split off earlier."
    ]
