--- a/Report.ipynb
+++ b/Report.ipynb
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The tennis player data available on Jeff Sackmann's GitHub<sup>**ADD THIS!!!!**</sup> is split into CSV files per year. To begin, we will use the read_csv() function to scrape the data from the web and use rbind() to combine the three dataframes into a single one."
+    "The tennis player data available on Jeff Sackmann's GitHub<sup>**ADD THIS!!!!**</sup> is split into CSV files per year. To begin, we will use the `read_csv()` function to scrape the data from the web and use `rbind()` to combine the three dataframes into a single one."
    ]
   },
   {
@@ -303,9 +303,9 @@
    "source": [
     "Next, we separate the tidied data into a training_set and a testing_set. The training_set will be given 0.75 of the cleaned_data set; testing_set will be given 0.25. This is so that our model is trained against the training set and we can later perform cross-validation with a testing set to find an optimal k-value.\n",
     "\n",
-    "We will use the createDataPartition() function and the slice() function to split the data into two sets.\n",
+    "We will use the `createDataPartition()` function and the `slice()` function to split the data into two sets.\n",
     "\n",
-    "**Note:** We have opted to omit entries containing NA values. This is to prevent issues from occurring with our training model later on."
+    "**Note:** We have opted to omit entries containing `NA` values. This is to prevent issues from occurring with our training model later on."
    ]
   },
   {
@@ -411,7 +411,7 @@
     "\n",
     "The correlation between our predicting variables. If one variable is highly correlated to another, we may eliminate them and simplify the modelling process.\n",
     "The correlation between our predicting variables with our labeling variables.\n",
-    "We achieve this by using the ggpair() and ggcorr() functions. While ggpair() gives us a comprehensive view of how each variable correlates to each other through histograms, box plots, regression model and more, ggcorr() provides a more straightforward matrix with results of correlation between variables"
+    "We achieve this by using the `ggpair()` and `ggcorr()` functions. While `ggpair()` gives us a comprehensive view of how each variable correlates to each other through histograms, box plots, regression model and more, `ggcorr()` provides a more straightforward matrix with results of correlation between variables"
    ]
   },
   {
