--- a/Report.ipynb
+++ b/Report.ipynb
@@ -2,73 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\t/var/folders/mn/w1m_3v8j6ys7d3x9hm7v2ykr0000gn/T//Rtmp0gUUFj/downloaded_packages\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "also installing the dependencies ‘mlbench’, ‘randomForest’, ‘slam’\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\t/var/folders/mn/w1m_3v8j6ys7d3x9hm7v2ykr0000gn/T//Rtmp0gUUFj/downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.2.1     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.3\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 2.1.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 0.8.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 1.3.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.4.0\n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "Loading required package: lattice\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘caret’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    lift\n",
-      "\n",
-      "\n",
-      "Registered S3 method overwritten by 'GGally':\n",
-      "  method from   \n",
-      "  +.gg   ggplot2\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘GGally’\n",
+      "Attaching package: ‘gridExtra’\n",
       "\n",
       "\n",
       "The following object is masked from ‘package:dplyr’:\n",
       "\n",
-      "    nasa\n",
+      "    combine\n",
       "\n",
       "\n"
      ]
@@ -602,7 +549,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.# Classification Analysis "
+    "### 2.5 Classification Model Tuning  "
    ]
   },
   {
@@ -871,33 +818,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table>\n",
-       "<caption>A data.frame: 20 × 2</caption>\n",
+       "<caption>A data.frame: 6 × 2</caption>\n",
        "<thead>\n",
        "\t<tr><th></th><th scope=col>k</th><th scope=col>Accuracy</th></tr>\n",
        "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td> 1</td><td>0.5520186</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td> 2</td><td>0.5489171</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td> 3</td><td>0.5659431</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td> 4</td><td>0.5589790</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td> 5</td><td>0.5685512</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td> 6</td><td>0.5680560</td></tr>\n",
-       "\t<tr><th scope=row>7</th><td> 7</td><td>0.5806094</td></tr>\n",
-       "\t<tr><th scope=row>8</th><td> 8</td><td>0.5671852</td></tr>\n",
-       "\t<tr><th scope=row>9</th><td> 9</td><td>0.5740217</td></tr>\n",
-       "\t<tr><th scope=row>10</th><td>10</td><td>0.5806117</td></tr>\n",
-       "\t<tr><th scope=row>11</th><td>11</td><td>0.5803619</td></tr>\n",
-       "\t<tr><th scope=row>12</th><td>12</td><td>0.5799879</td></tr>\n",
-       "\t<tr><th scope=row>13</th><td>13</td><td>0.5791162</td></tr>\n",
-       "\t<tr><th scope=row>14</th><td>14</td><td>0.5751387</td></tr>\n",
+       "\t<tr><th scope=row>1</th><td>1</td><td>0.5520186</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>2</td><td>0.5489171</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>3</td><td>0.5659431</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>4</td><td>0.5589790</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>5</td><td>0.5685512</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>6</td><td>0.5680560</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 2\n",
+       "\\begin{tabular}{r|ll}\n",
+       "  & k & Accuracy\\\\\n",
+       "  & <int> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t1 & 1 & 0.5520186\\\\\n",
+       "\t2 & 2 & 0.5489171\\\\\n",
+       "\t3 & 3 & 0.5659431\\\\\n",
+       "\t4 & 4 & 0.5589790\\\\\n",
+       "\t5 & 5 & 0.5685512\\\\\n",
+       "\t6 & 6 & 0.5680560\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 2\n",
+       "\n",
+       "| <!--/--> | k &lt;int&gt; | Accuracy &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| 1 | 1 | 0.5520186 |\n",
+       "| 2 | 2 | 0.5489171 |\n",
+       "| 3 | 3 | 0.5659431 |\n",
+       "| 4 | 4 | 0.5589790 |\n",
+       "| 5 | 5 | 0.5685512 |\n",
+       "| 6 | 6 | 0.5680560 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  k Accuracy \n",
+       "1 1 0.5520186\n",
+       "2 2 0.5489171\n",
+       "3 3 0.5659431\n",
+       "4 4 0.5589790\n",
+       "5 5 0.5685512\n",
+       "6 6 0.5680560"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 6 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>k</th><th scope=col>Accuracy</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
        "\t<tr><th scope=row>15</th><td>15</td><td>0.5834687</td></tr>\n",
        "\t<tr><th scope=row>16</th><td>16</td><td>0.5857072</td></tr>\n",
        "\t<tr><th scope=row>17</th><td>17</td><td>0.5824766</td></tr>\n",
@@ -908,25 +903,11 @@
        "</table>\n"
       ],
       "text/latex": [
-       "A data.frame: 20 × 2\n",
+       "A data.frame: 6 × 2\n",
        "\\begin{tabular}{r|ll}\n",
        "  & k & Accuracy\\\\\n",
        "  & <int> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t1 &  1 & 0.5520186\\\\\n",
-       "\t2 &  2 & 0.5489171\\\\\n",
-       "\t3 &  3 & 0.5659431\\\\\n",
-       "\t4 &  4 & 0.5589790\\\\\n",
-       "\t5 &  5 & 0.5685512\\\\\n",
-       "\t6 &  6 & 0.5680560\\\\\n",
-       "\t7 &  7 & 0.5806094\\\\\n",
-       "\t8 &  8 & 0.5671852\\\\\n",
-       "\t9 &  9 & 0.5740217\\\\\n",
-       "\t10 & 10 & 0.5806117\\\\\n",
-       "\t11 & 11 & 0.5803619\\\\\n",
-       "\t12 & 12 & 0.5799879\\\\\n",
-       "\t13 & 13 & 0.5791162\\\\\n",
-       "\t14 & 14 & 0.5751387\\\\\n",
        "\t15 & 15 & 0.5834687\\\\\n",
        "\t16 & 16 & 0.5857072\\\\\n",
        "\t17 & 17 & 0.5824766\\\\\n",
@@ -937,24 +918,10 @@
       ],
       "text/markdown": [
        "\n",
-       "A data.frame: 20 × 2\n",
+       "A data.frame: 6 × 2\n",
        "\n",
        "| <!--/--> | k &lt;int&gt; | Accuracy &lt;dbl&gt; |\n",
        "|---|---|---|\n",
-       "| 1 |  1 | 0.5520186 |\n",
-       "| 2 |  2 | 0.5489171 |\n",
-       "| 3 |  3 | 0.5659431 |\n",
-       "| 4 |  4 | 0.5589790 |\n",
-       "| 5 |  5 | 0.5685512 |\n",
-       "| 6 |  6 | 0.5680560 |\n",
-       "| 7 |  7 | 0.5806094 |\n",
-       "| 8 |  8 | 0.5671852 |\n",
-       "| 9 |  9 | 0.5740217 |\n",
-       "| 10 | 10 | 0.5806117 |\n",
-       "| 11 | 11 | 0.5803619 |\n",
-       "| 12 | 12 | 0.5799879 |\n",
-       "| 13 | 13 | 0.5791162 |\n",
-       "| 14 | 14 | 0.5751387 |\n",
        "| 15 | 15 | 0.5834687 |\n",
        "| 16 | 16 | 0.5857072 |\n",
        "| 17 | 17 | 0.5824766 |\n",
@@ -965,20 +932,6 @@
       ],
       "text/plain": [
        "   k  Accuracy \n",
-       "1   1 0.5520186\n",
-       "2   2 0.5489171\n",
-       "3   3 0.5659431\n",
-       "4   4 0.5589790\n",
-       "5   5 0.5685512\n",
-       "6   6 0.5680560\n",
-       "7   7 0.5806094\n",
-       "8   8 0.5671852\n",
-       "9   9 0.5740217\n",
-       "10 10 0.5806117\n",
-       "11 11 0.5803619\n",
-       "12 12 0.5799879\n",
-       "13 13 0.5791162\n",
-       "14 14 0.5751387\n",
        "15 15 0.5834687\n",
        "16 16 0.5857072\n",
        "17 17 0.5824766\n",
@@ -1012,7 +965,8 @@
    ],
    "source": [
     "k_accuracies_again <- choose_k$results %>% select(k, Accuracy)\n",
-    "k_accuracies_again\n",
+    "head(k_accuracies_again)\n",
+    "tail(k_accuracies_again)\n",
     "choose_k_again_plot <- ggplot(k_accuracies_again, aes(x = k, y = Accuracy)) +\n",
     "                          geom_line() +\n",
     "                          geom_point() +\n",
@@ -1027,13 +981,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see from plot - k = 12 gives us the highest accuracy out of the values we tested. Therefore we will choose k = 12 for our model."
+    "As seen in the plot above, `k = 12` gives us the highest accuracy out of the values we tested. \n",
+    "\n",
+    "=> Choose `k = 12` for our model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.# Classification Model Evaluation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1074,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1084,29 +1056,29 @@
        "\n",
        "          Reference\n",
        "Prediction   l   w\n",
-       "         l 615 540\n",
-       "         w 654 890\n",
-       "                                          \n",
-       "               Accuracy : 0.5576          \n",
-       "                 95% CI : (0.5386, 0.5765)\n",
-       "    No Information Rate : 0.5298          \n",
-       "    P-Value [Acc > NIR] : 0.002010        \n",
-       "                                          \n",
-       "                  Kappa : 0.1076          \n",
-       "                                          \n",
-       " Mcnemar's Test P-Value : 0.001075        \n",
-       "                                          \n",
-       "            Sensitivity : 0.4846          \n",
-       "            Specificity : 0.6224          \n",
-       "         Pos Pred Value : 0.5325          \n",
-       "         Neg Pred Value : 0.5764          \n",
-       "             Prevalence : 0.4702          \n",
-       "         Detection Rate : 0.2279          \n",
-       "   Detection Prevalence : 0.4279          \n",
-       "      Balanced Accuracy : 0.5535          \n",
-       "                                          \n",
-       "       'Positive' Class : l               \n",
-       "                                          "
+       "         l 616 532\n",
+       "         w 653 898\n",
+       "                                         \n",
+       "               Accuracy : 0.5609         \n",
+       "                 95% CI : (0.542, 0.5798)\n",
+       "    No Information Rate : 0.5298         \n",
+       "    P-Value [Acc > NIR] : 0.0006303      \n",
+       "                                         \n",
+       "                  Kappa : 0.114          \n",
+       "                                         \n",
+       " Mcnemar's Test P-Value : 0.0004904      \n",
+       "                                         \n",
+       "            Sensitivity : 0.4854         \n",
+       "            Specificity : 0.6280         \n",
+       "         Pos Pred Value : 0.5366         \n",
+       "         Neg Pred Value : 0.5790         \n",
+       "             Prevalence : 0.4702         \n",
+       "         Detection Rate : 0.2282         \n",
+       "   Detection Prevalence : 0.4253         \n",
+       "      Balanced Accuracy : 0.5567         \n",
+       "                                         \n",
+       "       'Positive' Class : l              \n",
+       "                                         "
       ]
      },
      "metadata": {},
@@ -1125,6 +1097,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
   },
   {
    "cell_type": "markdown",
