--- a/Report.ipynb
+++ b/Report.ipynb
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
@@ -997,7 +997,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.# Classification Model Evaluation"
+    "### 2.6 Classification Model Evaluation"
    ]
   },
   {
