--- a/Report.ipynb
+++ b/Report.ipynb
@@ -1001,54 +1001,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will retrain our model and assign the trained model to `final_classifier`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "k-Nearest Neighbors \n",
-       "\n",
-       "8045 samples\n",
-       "   5 predictor\n",
-       "   2 classes: 'l', 'w' \n",
-       "\n",
-       "No pre-processing\n",
-       "Resampling: Bootstrapped (25 reps) \n",
-       "Summary of sample sizes: 8045, 8045, 8045, 8045, 8045, 8045, ... \n",
-       "Resampling results:\n",
-       "\n",
-       "  Accuracy   Kappa    \n",
-       "  0.5646438  0.1240926\n",
-       "\n",
-       "Tuning parameter 'k' was held constant at a value of 12"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "final_k = data.frame(k = 12)\n",
     "final_classifier <- train(x = X_train, y = Y_train, method = \"knn\", tuneGrid = final_k)\n",
-    "final_classifier"
+    "# final_classifier"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can test the accuracy of our model using the testing set data that we split off earlier."
+    "Now, we can test the accuracy of our model using the testing set data that we split off earlier."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<strong>Accuracy:</strong> 0.57206372730641"
+      ],
+      "text/latex": [
+       "\\textbf{Accuracy:} 0.57206372730641"
+      ],
+      "text/markdown": [
+       "**Accuracy:** 0.57206372730641"
+      ],
+      "text/plain": [
+       " Accuracy \n",
+       "0.5720637 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
@@ -1056,29 +1058,29 @@
        "\n",
        "          Reference\n",
        "Prediction   l   w\n",
-       "         l 616 532\n",
-       "         w 653 898\n",
-       "                                         \n",
-       "               Accuracy : 0.5609         \n",
-       "                 95% CI : (0.542, 0.5798)\n",
-       "    No Information Rate : 0.5298         \n",
-       "    P-Value [Acc > NIR] : 0.0006303      \n",
-       "                                         \n",
-       "                  Kappa : 0.114          \n",
-       "                                         \n",
-       " Mcnemar's Test P-Value : 0.0004904      \n",
-       "                                         \n",
-       "            Sensitivity : 0.4854         \n",
-       "            Specificity : 0.6280         \n",
-       "         Pos Pred Value : 0.5366         \n",
-       "         Neg Pred Value : 0.5790         \n",
-       "             Prevalence : 0.4702         \n",
-       "         Detection Rate : 0.2282         \n",
-       "   Detection Prevalence : 0.4253         \n",
-       "      Balanced Accuracy : 0.5567         \n",
-       "                                         \n",
-       "       'Positive' Class : l              \n",
-       "                                         "
+       "         l 634 520\n",
+       "         w 635 910\n",
+       "                                          \n",
+       "               Accuracy : 0.5721          \n",
+       "                 95% CI : (0.5531, 0.5908)\n",
+       "    No Information Rate : 0.5298          \n",
+       "    P-Value [Acc > NIR] : 5.754e-06       \n",
+       "                                          \n",
+       "                  Kappa : 0.1367          \n",
+       "                                          \n",
+       " Mcnemar's Test P-Value : 0.0007954       \n",
+       "                                          \n",
+       "            Sensitivity : 0.4996          \n",
+       "            Specificity : 0.6364          \n",
+       "         Pos Pred Value : 0.5494          \n",
+       "         Neg Pred Value : 0.5890          \n",
+       "             Prevalence : 0.4702          \n",
+       "         Detection Rate : 0.2349          \n",
+       "   Detection Prevalence : 0.4276          \n",
+       "      Balanced Accuracy : 0.5680          \n",
+       "                                          \n",
+       "       'Positive' Class : l               \n",
+       "                                          "
       ]
      },
      "metadata": {},
@@ -1088,21 +1090,36 @@
    "source": [
     "test_pred <- predict(final_classifier, X_test)\n",
     "test_results <- confusionMatrix(test_pred, Y_test)\n",
+    "test_results$overall[1]\n",
     "test_results"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3 Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The success rate that our classification model had at correctly predicting the match outcome from our training data was `57.21%`. This accuracy is only marginally more significant than a coin flip (ie. 50% chance) and is not enough such that we could recommend its use for predicting successful matches. "
    ]
   },
   {
