added summary statistics, additional wip

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -2,25 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attaching package: ‘gridExtra’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:dplyr’:\n",
-      "\n",
-      "    combine\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Uncomment the following lines if their respective packages are not yet installed:\n",
     "# install.packages(\"GGally\")   \n",
@@ -30,7 +14,9 @@
     "library(caret)\n",
     "library(ggplot2)\n",
     "library(GGally)\n",
-    "library(repr)"
+    "library(repr)\n",
+    "library(purrr)\n",
+    "library(broom)"
    ]
   },
   {
@@ -423,8 +409,15 @@
     "tennis_matrix_train\n",
     "\n",
     "training_set2 = select(training_set, -hand)\n",
-    "tennis_train_pairs = ggpairs(training_set2, columns = 1:5, ggplot2::aes(colour=result), progress = FALSE,) + labs(title=\"Matrix of Parameter Relationships\")\n",
+    "tennis_train_pairs = ggpairs(training_set2, columns = 1:5, ggplot2::aes(colour=result), progress = FALSE,) + labs(title=\"Matrix of Parameter Comparisons\")\n",
     "tennis_train_pairs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An intersting point to note is that the histogram distributions for `Minutes`, `Age`, `Height`, and `Aces` do not appear to vary for each `result` outcome. We will keep this in mind when performing our analysis later."
    ]
   },
   {
@@ -436,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -487,37 +480,55 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<caption>A tibble: 1 × 4</caption>\n",
+       "<caption>A matrix: 6 × 4 of type dbl</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>minutes</th><th scope=col>age</th><th scope=col>height</th><th scope=col>aces</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th></th><th scope=col>minutes</th><th scope=col>age</th><th scope=col>height</th><th scope=col>aces</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>110.405</td><td>30.12171</td><td>186.3549</td><td>6.85606</td></tr>\n",
+       "\t<tr><th scope=row>minimum</th><td>  8.000</td><td>19.74264</td><td>163.0000</td><td> 0.00000</td></tr>\n",
+       "\t<tr><th scope=row>q1</th><td> 80.000</td><td>27.71800</td><td>183.0000</td><td> 3.00000</td></tr>\n",
+       "\t<tr><th scope=row>median</th><td>104.000</td><td>30.08350</td><td>185.0000</td><td> 5.00000</td></tr>\n",
+       "\t<tr><th scope=row>mean</th><td>110.405</td><td>30.12171</td><td>186.3549</td><td> 6.85606</td></tr>\n",
+       "\t<tr><th scope=row>q3</th><td>133.000</td><td>32.42984</td><td>190.0000</td><td> 9.00000</td></tr>\n",
+       "\t<tr><th scope=row>maximum</th><td>396.000</td><td>40.62423</td><td>208.0000</td><td>61.00000</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 1 × 4\n",
-       "\\begin{tabular}{llll}\n",
-       " minutes & age & height & aces\\\\\n",
-       " <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "A matrix: 6 × 4 of type dbl\n",
+       "\\begin{tabular}{r|llll}\n",
+       "  & minutes & age & height & aces\\\\\n",
        "\\hline\n",
-       "\t 110.405 & 30.12171 & 186.3549 & 6.85606\\\\\n",
+       "\tminimum &   8.000 & 19.74264 & 163.0000 &  0.00000\\\\\n",
+       "\tq1 &  80.000 & 27.71800 & 183.0000 &  3.00000\\\\\n",
+       "\tmedian & 104.000 & 30.08350 & 185.0000 &  5.00000\\\\\n",
+       "\tmean & 110.405 & 30.12171 & 186.3549 &  6.85606\\\\\n",
+       "\tq3 & 133.000 & 32.42984 & 190.0000 &  9.00000\\\\\n",
+       "\tmaximum & 396.000 & 40.62423 & 208.0000 & 61.00000\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 1 × 4\n",
+       "A matrix: 6 × 4 of type dbl\n",
        "\n",
-       "| minutes &lt;dbl&gt; | age &lt;dbl&gt; | height &lt;dbl&gt; | aces &lt;dbl&gt; |\n",
-       "|---|---|---|---|\n",
-       "| 110.405 | 30.12171 | 186.3549 | 6.85606 |\n",
+       "| <!--/--> | minutes | age | height | aces |\n",
+       "|---|---|---|---|---|\n",
+       "| minimum |   8.000 | 19.74264 | 163.0000 |  0.00000 |\n",
+       "| q1 |  80.000 | 27.71800 | 183.0000 |  3.00000 |\n",
+       "| median | 104.000 | 30.08350 | 185.0000 |  5.00000 |\n",
+       "| mean | 110.405 | 30.12171 | 186.3549 |  6.85606 |\n",
+       "| q3 | 133.000 | 32.42984 | 190.0000 |  9.00000 |\n",
+       "| maximum | 396.000 | 40.62423 | 208.0000 | 61.00000 |\n",
        "\n"
       ],
       "text/plain": [
-       "  minutes age      height   aces   \n",
-       "1 110.405 30.12171 186.3549 6.85606"
+       "        minutes age      height   aces    \n",
+       "minimum   8.000 19.74264 163.0000  0.00000\n",
+       "q1       80.000 27.71800 183.0000  3.00000\n",
+       "median  104.000 30.08350 185.0000  5.00000\n",
+       "mean    110.405 30.12171 186.3549  6.85606\n",
+       "q3      133.000 32.42984 190.0000  9.00000\n",
+       "maximum 396.000 40.62423 208.0000 61.00000"
       ]
      },
      "metadata": {},
@@ -529,10 +540,11 @@
     "    summarize(count = n())\n",
     "training_table\n",
     "\n",
-    "\n",
-    "quantitative_summary_table <- training_set %>% \n",
-    "                             select(minutes, age, height, aces) %>%\n",
-    "                             map_df (~mean(., na.rm = TRUE)) \n",
+    "quantitative_summary_table <- training_set %>%\n",
+    "    select_if(is.numeric)  %>%\n",
+    "    map(~tidy(summary(.x))) %>%  \n",
+    "    do.call(rbind, .) %>%\n",
+    "    t()\n",
     "quantitative_summary_table"
    ]
   },
@@ -1117,14 +1129,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The success rate that our classification model had at correctly predicting the match outcome from our training data was `57.21%`. This accuracy is only marginally more significant than a coin flip (ie. 50% chance) and is not enough such that we could recommend its use for predicting successful matches. "
+    "The success rate that our classification model had at correctly predicting the match outcome from our training data was `57.21%`. This accuracy is only marginally more significant than a coin flip (ie. 50% chance) and is not enough such that we could recommend its use for predicting successful matches. \n",
+    "\n",
+    "We were also interested in determining whether certain attributes contributed towards greater match success. As we saw in the Matrix of Parameter Comparisons in **2.4 Dataset Visualization**, there was not a significant correlation of `Minutes`, `Age`, `Height`, `Aces` with `Result`. This is further supported by "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Citation"
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Citations"
    ]
   },
   {
@@ -1151,7 +1172,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
